--- a/portfolio.html
+++ b/portfolio.html
@@ -25,36 +25,38 @@
         <header class="header">
             <div class="container header-container">
                 <nav class="header-nav">
-                    <a lang="en" href="./" class="header-logo link"
+                    <a lang="en" href="./" class="logo header__logo link"
                         >Web<span class="dark-color">Studio</span></a
                     >
-                    <ul class="list menu-list">
-                        <li class="menu-item">
-                            <a class="menu-link link" href="./index.html"
+                    <ul class="list header-nav__list">
+                        <li class="header-nav__item">
+                            <a class="header-nav__link link" href="./index.html"
                                 >Студия</a
                             >
                         </li>
-                        <li class="menu-item">
+                        <li class="header-nav__item">
                             <a
-                                class="menu-link link current"
+                                class="header-nav__link link current"
                                 href="./portfolio.html"
                                 >Портфолио</a
                             >
                         </li>
-                        <li class="menu-item">
-                            <a class="menu-link link" href="">Контакты</a>
+                        <li class="header-nav__item">
+                            <a class="header-nav__link link" href=""
+                                >Контакты</a
+                            >
                         </li>
                     </ul>
                 </nav>
                 <ul class="list header-connect">
                     <li>
                         <a
-                            class="header-mail link"
+                            class="header-connect__mail link"
                             href="mailto:info@devstudio.com"
                         >
                             info@devstudio.com
                             <svg
-                                class="address-icon header-mail"
+                                class="address-icon header-connect__mail"
                                 width="16px"
                                 height="12px"
                             >
@@ -65,10 +67,13 @@
                         </a>
                     </li>
                     <li>
-                        <a class="header-tel link" href="tel:+380961111111">
+                        <a
+                            class="header-connect__tel link"
+                            href="tel:+380961111111"
+                        >
                             +38 096 111 11 11
                             <svg
-                                class="address-icon header-tel"
+                                class="address-icon header-connect__tel"
                                 width="10px"
                                 height="16px"
                             >
